--- a/index.html
+++ b/index.html
@@ -3,110 +3,192 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Big Bachat Offer</title>
+<title>Limited Time Offer</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
+
 <style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #f4f4f4;
-  text-align: center;
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:'Poppins',sans-serif;
 }
 
-.container {
-  padding: 20px;
+body{
+background:#ffffff;
+color:#111;
+text-align:center;
 }
 
-.logo {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  width: 120px;
+/* Announcement Bar */
+.topbar{
+background:#000;
+color:#fff;
+padding:8px;
+font-size:14px;
+font-weight:600;
 }
 
-.offer-badge {
-  background: #ffcc00;
-  color: #000;
-  padding: 10px 20px;
-  display: inline-block;
-  font-weight: bold;
-  border-radius: 5px;
-  margin-top: 30px;
+/* Logo */
+.logo{
+padding:15px 0;
+}
+.logo img{
+width:140px;
 }
 
-.price {
-  font-size: 60px;
-  font-weight: bold;
-  margin: 20px 0;
+/* Product Image */
+.product{
+padding:10px;
+}
+.product img{
+width:90%;
+max-width:420px;
 }
 
-.limited {
-  font-size: 18px;
-  color: red;
-  font-weight: bold;
+/* Product Title */
+.title{
+font-size:20px;
+font-weight:600;
+padding:10px 20px;
 }
 
-.product-img {
-  width: 80%;
-  max-width: 400px;
-  margin: 20px auto;
+/* Price Section */
+.price-box{
+margin-top:10px;
 }
 
-.cta-btn {
-  display: inline-block;
-  background: #e60000;
-  color: #fff;
-  padding: 15px 40px;
-  font-size: 20px;
-  text-decoration: none;
-  border-radius: 30px;
-  margin-top: 20px;
-  font-weight: bold;
+.old-price{
+text-decoration:line-through;
+color:#888;
+font-size:18px;
 }
 
-.cta-btn:hover {
-  background: #cc0000;
+.new-price{
+font-size:42px;
+color:#e60000;
+font-weight:800;
+margin:5px 0;
 }
 
-.trust {
-  margin-top: 30px;
-  font-size: 14px;
-  color: #555;
+.discount{
+color:green;
+font-weight:600;
+font-size:14px;
 }
 
-@media (max-width: 600px) {
-  .price {
-    font-size: 45px;
-  }
+/* Urgency */
+.urgency{
+color:red;
+font-weight:700;
+margin-top:10px;
+font-size:16px;
+}
+
+/* CTA Button */
+.buy-btn{
+display:block;
+width:90%;
+max-width:420px;
+margin:20px auto;
+padding:15px;
+background:#e60000;
+color:#fff;
+font-size:18px;
+font-weight:700;
+text-decoration:none;
+border-radius:40px;
+transition:0.3s;
+}
+
+.buy-btn:hover{
+background:#cc0000;
+}
+
+/* Trust Section */
+.trust{
+background:#f5f5f5;
+padding:15px;
+font-size:14px;
+color:#333;
+}
+
+.trust p{
+margin:5px 0;
+}
+
+/* Sticky Bottom Button */
+.sticky-buy{
+position:fixed;
+bottom:0;
+left:0;
+width:100%;
+background:#e60000;
+color:#fff;
+padding:15px;
+font-size:18px;
+font-weight:700;
+text-decoration:none;
+}
+
+.sticky-buy:hover{
+background:#cc0000;
+}
+
+/* Footer */
+.footer{
+background:#000;
+color:#fff;
+font-size:12px;
+padding:10px;
+margin-top:60px;
 }
 </style>
 </head>
 <body>
 
-<div class="container">
-
-<img src="logo.png" class="logo">
-
-<div class="offer-badge">
-🔥 BIG BACHAT DHAMAAL 🔥
+<div class="topbar">
+🔥 BIG BACHAT DHAMAAL – LIMITED STOCK AVAILABLE 🔥
 </div>
 
-<div class="price">₹298/-</div>
-
-<div class="limited">
-⏳ LIMITED TIME OFFER
+<div class="logo">
+<img src="logo.png" alt="Logo">
 </div>
 
-<img src="product.png" class="product-img">
+<div class="product">
+<img src="product.png" alt="Product">
+</div>
 
-<br>
+<div class="title">
+Prestige 5L Aluminium Pressure Cooker
+</div>
 
-<a href="#" class="cta-btn">🛒 SHOP NOW</a>
+<div class="price-box">
+<div class="old-price">₹1,299</div>
+<div class="new-price">₹298</div>
+<div class="discount">78% OFF</div>
+</div>
+
+<div class="urgency">
+⏳ Limited Time Offer – Order Now!
+</div>
+
+<a href="#" class="buy-btn">🛒 SHOP NOW</a>
 
 <div class="trust">
-✔ Secure Payment &nbsp; | &nbsp; ✔ Cash on Delivery &nbsp; | &nbsp; ✔ Fast Shipping
+<p>✔ Cash on Delivery Available</p>
+<p>✔ Secure Payment</p>
+<p>✔ Fast Shipping Across India</p>
 </div>
 
+<div class="footer">
+© 2026 MegMesh Shop. All Rights Reserved.
 </div>
+
+<a href="#" class="sticky-buy">
+🛒 BUY NOW – ₹298
+</a>
 
 </body>
 </html>
