--- a/index.html
+++ b/index.html
@@ -3,239 +3,76 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ShopKart - Flipkart Style UI</title>
+<title>MegMesh Shop</title>
 
 <style>
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-body{
-    background:#f1f3f6;
-}
-
-/* HEADER */
-header{
-    background:#2874f0;
-    padding:10px 50px;
-    display:flex;
-    align-items:center;
-    gap:30px;
-}
-
-.logo{
-    color:#fff;
-    font-size:22px;
-    font-weight:bold;
-}
-
-.search-bar{
-    flex:1;
-    display:flex;
-}
-
-.search-bar input{
-    width:100%;
-    padding:8px 10px;
-    border:none;
-    outline:none;
-}
-
-.search-bar button{
-    background:#ffe500;
-    border:none;
-    padding:8px 15px;
-    cursor:pointer;
-}
-
-.header-right{
-    display:flex;
-    gap:20px;
-    color:#fff;
-    font-size:14px;
-    cursor:pointer;
-}
-
-/* CATEGORY NAV */
-.category-nav{
-    background:#fff;
-    display:flex;
-    justify-content:space-around;
-    padding:12px 0;
-    box-shadow:0 1px 5px rgba(0,0,0,0.1);
-    font-size:14px;
-}
-
-.category-nav div{
-    cursor:pointer;
-    transition:0.3s;
-}
-
-.category-nav div:hover{
-    color:#2874f0;
-}
-
-/* BANNER */
-.banner{
-    margin:20px;
-    background:linear-gradient(90deg,#2874f0,#6a11cb);
-    color:#fff;
-    padding:40px;
-    border-radius:6px;
-    text-align:center;
-}
-
-.banner h2{
-    font-size:28px;
-}
-
-/* PRODUCT SECTION */
-.products{
-    padding:20px 50px;
-}
-
-.products h3{
-    margin-bottom:15px;
-}
-
-.product-grid{
-    display:grid;
-    grid-template-columns:repeat(auto-fill,minmax(200px,1fr));
-    gap:20px;
-}
-
-.product-card{
-    background:#fff;
-    padding:15px;
-    border-radius:6px;
-    text-align:center;
-    transition:0.3s;
-    cursor:pointer;
-}
-
-.product-card:hover{
-    box-shadow:0 5px 15px rgba(0,0,0,0.2);
-    transform:translateY(-5px);
-}
-
-.product-card img{
-    width:100%;
-    height:150px;
-    object-fit:cover;
-    margin-bottom:10px;
-}
-
-.price{
-    color:green;
-    font-weight:bold;
-}
-
-.old-price{
-    text-decoration:line-through;
-    color:gray;
-    font-size:13px;
-}
-
-/* FOOTER */
-footer{
-    background:#172337;
-    color:#fff;
-    text-align:center;
-    padding:20px;
-    margin-top:40px;
-}
-
-/* RESPONSIVE */
-@media(max-width:768px){
-    header{
-        flex-direction:column;
-        align-items:flex-start;
-        gap:10px;
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background: #f4f4f4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
     }
 
-    .category-nav{
-        flex-wrap:wrap;
-        gap:10px;
+    .container {
+        text-align: center;
+        background: white;
+        padding: 40px;
+        border-radius: 12px;
+        width: 90%;
+        max-width: 500px;
+        box-shadow: 0 8px 25px rgba(0,0,0,0.1);
     }
 
-    .products{
-        padding:20px;
+    h1 {
+        font-size: 28px;
+        margin-bottom: 20px;
+        color: #333;
     }
-}
+
+    .categories {
+        margin: 25px 0;
+        font-size: 16px;
+        color: #555;
+    }
+
+    .categories span {
+        display: block;
+        margin: 8px 0;
+    }
+
+    .enter-btn {
+        background: #2874f0;
+        color: white;
+        padding: 12px 30px;
+        font-size: 18px;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        text-decoration: none;
+        display: inline-block;
+        transition: 0.3s;
+    }
+
+    .enter-btn:hover {
+        background: #1b5bbf;
+    }
 </style>
 </head>
 
 <body>
 
-<header>
-    <div class="logo">ShopKart</div>
-
-    <div class="search-bar">
-        <input type="text" placeholder="Search for products, brands and more">
-        <button>Search</button>
+<div class="container">
+    <h1>Welcome</h1>
+    <div class="categories">
+        <span>Everything you need, all in one place.</span>
+        <span>Grocery • Mobiles • Electronics • Home & Kitchen • Fashion • Shoes • Bags</span>
     </div>
-
-    <div class="header-right">
-        <div>Login</div>
-        <div>Become a Seller</div>
-        <div>Cart 🛒</div>
-    </div>
-</header>
-
-<div class="category-nav">
-    <div>Grocery</div>
-    <div>Mobiles</div>
-    <div>Fashion</div>
-    <div>Electronics</div>
-    <div>Home</div>
-    <div>Appliances</div>
-    <div>Travel</div>
-    <div>Beauty</div>
+    <a href="#" class="enter-btn">Enter Site →</a>
 </div>
-
-<div class="banner">
-    <h2>Big Billion Style Sale 🔥</h2>
-    <p>Up to 70% OFF on Top Products</p>
-</div>
-
-<section class="products">
-    <h3>Best Deals</h3>
-
-    <div class="product-grid">
-
-        <div class="product-card">
-            <img src="https://via.placeholder.com/200x150">
-            <p>Smartphone XYZ</p>
-            <p class="price">₹14,999 <span class="old-price">₹19,999</span></p>
-        </div>
-
-        <div class="product-card">
-            <img src="https://via.placeholder.com/200x150">
-            <p>Wireless Headphones</p>
-            <p class="price">₹1,499 <span class="old-price">₹2,999</span></p>
-        </div>
-
-        <div class="product-card">
-            <img src="https://via.placeholder.com/200x150">
-            <p>Men's Casual Shoes</p>
-            <p class="price">₹999 <span class="old-price">₹1,999</span></p>
-        </div>
-
-        <div class="product-card">
-            <img src="https://via.placeholder.com/200x150">
-            <p>Kitchen Mixer</p>
-            <p class="price">₹2,499 <span class="old-price">₹3,999</span></p>
-        </div>
-
-    </div>
-</section>
-
-<footer>
-    © 2026 ShopKart Clone | Designed for Practice
-</footer>
 
 </body>
 </html>
